	- also list of dictionary is displayed in which current word can be searched by clicking on respective link
- dynamic css for classic mode
	- previously static list was used, which may not work if website changes css
	- now css are extracted from response in order to display result in native look
- auto close
	- if selected pop-up will automatically close after specified time
- based on user feedback, add-on/status bar button is shortened and color-coding is used for current status
- current dictionary label is displayed in title bar for classic mode
- fix
	- fix for manual search, now phrase can be searched
	- some minor fix for cambridge dictionary after website interface is changed
	- fix for case where frame is selected and event not dispatched on doc for close shortcut
------------------------------------------------------------------------------------------------

---------------------------------
Handy Dictionary v0.5 16-Mar-2013
---------------------------------
- fix for cambridge dictionary compact mode
	- Compact mode was not displaying details from cambridge dictionary after website interface changed
- CSS updated for classic mode
	- several dictionary websites changed styles/interface, so latest css to be used for classic dictionary updated
------------------------------------------------------------------------------------------------

-----------------------
Handy Dictionary v0.4
-----------------------
- Restart-less
	- From next time there will be no restart required to receive updates
- Enable tool for form elements
	- double click on words to lookup inside input-box/text-area OR
	- right click on input-box/text-area and perform lookup
- Fix, positioning of pop-up when click near right/bottom edge.
	- Pop-up will be always displayed in visible window, no mater where you click 
- Compact Mode
	- For advance user quick lookup (only simple definition/description) in compact mode.
- Native look for existing interface