@@ -5,11 +5,19 @@ turnoff_label=Turn Off
 pref_label=Preferences
 howto_label=How to use?
 
-turnon_tooltip=Handy Dictionary: Click to Enable
-turnoff_tooltip=Handy Dictionary: Click to Disable
+turnon_tooltip=Handy Dictionary: Click to Enable Temporary
+turnoff_tooltip=Handy Dictionary: Click to Disable Temporary
 
 ext_short_label=HandyDict:
 opt_label=Options
 
 lookup_manual_label=Lookup Manually
 lookup_label=Lookup
+
+block_website_prefix=Disable for
+enable_website_prefix=Enable for
+block_website_tooltip=Always disable for given website
+enable_website_tooltip=Always enable for given website
+
+toolbar_enable_tooltip=Click to Enable Temporary
+toolbar_disable_tooltip=Click to Disable Temporary
